--- a/client/src/index.css
+++ b/client/src/index.css
@@ -40,3 +40,15 @@ input[type="date"] {
   color: rgb(127, 127, 127)!important;
   font: 1em sans-serif;
 }
+
+:root {
+  background-color: rgb(238, 238, 238, 1) !important;
+  }
+  
+  .dark {
+  background-color: rgb(30, 30, 30, 1) !important;
+  }
+  .light {
+    
+  background-color: rgb(238, 238, 238, 1) !important;
+  }
