--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,7 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
 body {
-  font-family: 'Poppins', sans-serif;
- 
+  font-family: "Poppins", sans-serif;
 }
 
 @tailwind base;
@@ -32,23 +31,19 @@ input[type="date"] {
   color-scheme: light;
 }
 
-.isPiMa{
-  justify-content: center!important;
+.isPiMa {
+  justify-content: center !important;
 }
 
-.bOmZm option{
-  color: rgb(127, 127, 127)!important;
+.bOmZm option {
+  color: rgb(127, 127, 127) !important;
   font: 1em sans-serif;
 }
 
 :root {
   background-color: rgb(238, 238, 238, 1) !important;
-  }
-  
-  .dark {
+}
+
+.dark {
   background-color: rgb(30, 30, 30, 1) !important;
-  }
-  .light {
-    
-  background-color: rgb(238, 238, 238, 1) !important;
-  }
+}
