--- a/client/src/index.css
+++ b/client/src/index.css
@@ -22,6 +22,7 @@ body {
     color: black !important;
   }
 }
+
 input[type="date"]::-webkit-calendar-picker-indicator {
   filter: invert(0);
 }
@@ -50,4 +51,41 @@ input[type="date"] {
 
 .dark {
   background-color: rgb(30, 30, 30, 1) !important;
+}
+
+.skeleton {
+  background-image: linear-gradient(105deg,
+      transparent 0%,
+      transparent 40%,
+      #b0b5bf 50%,
+      /* blue-500 */
+      transparent 60%,
+      transparent 100%) !important;
+}
+.data-table-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 400px;
+  overflow-y: auto;
+  border: 1px solid #ddd; /* Light border for subtlety */
+  border-radius: 8px; /* Rounded corners */
+}
+
+.data-table-container::-webkit-scrollbar {
+  width: 12px; /* Width of the scrollbar */
+}
+
+.data-table-container::-webkit-scrollbar-thumb {
+  background-color: #aaa; /* Soft gray color */
+  border-radius: 10px; /* Rounded edges */
+  transition: background-color 0.3s ease; /* Smooth transition */
+}
+
+.data-table-container::-webkit-scrollbar-thumb:hover {
+  background-color: #888; /* Darker gray on hover */
+}
+
+.data-table-container::-webkit-scrollbar-track {
+  background: #f7f7f7; /* Very light gray track */
+  border-radius: 8px; /* Rounded edges */
 }
